--- a/style.css
+++ b/style.css
@@ -4,22 +4,25 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: "Roboto", sans-serif;
   color: #1c1d21;
-  margin:0;
+  margin: 0;
 }
+
 /* base styles */
 
-.anchor_color{
+.anchor_color {
   color: #1c1d21;
 }
-.flex-end-alignment{
-  display:flex;
+
+.flex-end-alignment {
+  display: flex;
   align-items: flex-end;
 }
 
-.flex-justify-end{
+.flex-justify-end {
   display: flex;
   justify-content: flex-end;
 }
@@ -27,7 +30,8 @@ body {
 .footer_list {
   list-style-type: none;
 }
-.max_width{
+
+.max_width {
   max-width: 1440px;
 }
 
@@ -37,7 +41,7 @@ body {
 }
 
 .flex-j-center {
-  display:flex;
+  display: flex;
   justify-content: center;
 }
 
@@ -49,9 +53,11 @@ body {
   line-height: 119.5%;
   max-width: 1212px;
 }
-.text_deco_none{
+
+.text_deco_none {
   text-decoration: none;
 }
+
 .section_wrapper {
   margin: 0 auto;
 }
@@ -60,6 +66,7 @@ body {
 .header {
   position: relative;
 }
+
 .header_wrapper {
   position: fixed;
   width: 100%;
@@ -78,7 +85,7 @@ body {
   width: 100%;
 }
 
-.text_transform{
+.text_transform {
   text-transform: capitalize;
 }
 
@@ -86,8 +93,9 @@ body {
   width: 80%;
   list-style-type: none;
 }
-.font_size{
-  font-size: 25px; 
+
+.font_size {
+  font-size: 25px;
 }
 
 
@@ -153,28 +161,26 @@ body {
 }
 
 
-.high_way {
-  margin: 0 8px;
-}
-
 .paragraph_header {
   font-weight: bold;
   margin-bottom: 24px;
+  margin-top: 32px;
 }
 
 .pros_photo {
   height: 324px;
 }
 
-.constant_width{
-  width: 400px;  
+.constant_width {
+  width: 400px;
 }
+
 .paragraph_description {
   line-height: 24px;
 }
 
 .text {
-color: rgba(0, 0, 0, 0.46);
+  color: #848383;
   text-align: center;
   font-size: 16px;
   max-width: 308px;
@@ -218,11 +224,9 @@ color: rgba(0, 0, 0, 0.46);
   width: 130px;
   height: 35px;
   background-color: #ece0e0;
-}
-
-.book {
   font-size: 16px;
 }
+
 
 .girl_pic {
   width: 504px;
@@ -273,7 +277,7 @@ color: rgba(0, 0, 0, 0.46);
 }
 
 .newsletter_info {
-   color: rgba(0, 0, 0, 0.46);
+  color: rgba(0, 0, 0, 0.46);
 }
 
 .email {
@@ -293,13 +297,19 @@ color: rgba(0, 0, 0, 0.46);
   width: 117px;
 }
 
+.pros_container {
+  max-width: 400px;
+  margin: 8px;
+}
+
 .nav {
-  margin:0;
+  margin: 0;
   padding-bottom: 0px;
 }
 
 .footer_box {
   width: 300px;
+  padding-bottom: 24px;
 }
 
 .privacy {
@@ -338,6 +348,7 @@ color: rgba(0, 0, 0, 0.46);
 .fourth_page_footer {
   font-size: 20px;
 }
-.bot_list{
+
+.bot_list {
   padding-bottom: 15px;
 }
