--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 }
 
 .nav {
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
 }
 
@@ -253,6 +253,9 @@ body {
   height: 302px;
   align-items: center;
 }
+.padding{
+padding-left: 104px;
+}
 
 .cabin_lovers {
   font-size: 52px;
@@ -268,13 +271,11 @@ body {
 }
 
 .newsletter {
-  width: 668px;
-  padding-left: 32px;
-  padding-bottom: 24px;
+  max-width: 668px;
 }
 
 .input_newsletter {
-  width: 384px;
+  max-width: 288px;
 }
 
 .input_header {
@@ -286,16 +287,18 @@ body {
 }
 
 .email {
+  font-size: 24px;
   border: 0;
   outline: 0;
   background: transparent;
   border-bottom: 1px solid black;
 }
-
+.padding_footer{
+padding: 100px 900px 30px 30px;
+}
 .bot_nav_container {
-  width: 668px;
-  height: 300px;
-  padding-bottom: 16px;
+  max-width: 668px;
+  padding: 100px 0 30px 0;
 }
 
 .ul_container {
