--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
 }
 
 
-
 .margin_menu {
   margin-left: 100px;
   width: 100%;
@@ -36,6 +35,11 @@ body {
 .flex-justify-end {
   display: flex;
   justify-content: flex-end;
+}
+
+.flex-justify-between {
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer_list {
@@ -82,7 +86,11 @@ body {
   position: fixed;
   width: 100%;
   background-color: #d9dcd7;
+}
+
+.header_wrapper > div {
   padding: 32px 103px 32px 107px;
+
 }
 
 .section_hero {
@@ -100,7 +108,6 @@ body {
 }
 
 .link_flex_container {
-  width: 80%;
   list-style-type: none;
 }
 
@@ -114,12 +121,14 @@ body {
 
 .links {
   margin: 0 10px;
+  padding: 4px 8px;
+  display: inline-block;
 }
 
 
 .sign {
   color: black;
-  max-width: 80px;
+  margin-left: 50px;
 }
 
 .pink {
@@ -367,7 +376,6 @@ body {
 }
 
 
-
 .fourth_page_footer {
   font-size: 20px;
   margin-right: 314px;
@@ -380,11 +388,11 @@ body {
 }
 
 
-.arrow_button{
-  position:absolute;
+.arrow_button {
+  position: absolute;
   padding-left: 256px;
 }
 
-.input_input{
-  position:relative;
+.input_input {
+  position: relative;
 }
