--- a/style_rwd.css
+++ b/style_rwd.css
@@ -2,21 +2,32 @@
     img.main_photo {
         display: none;
     }
-    .catch_phrase{
-        max-width: 767px;
+    .section_hero {
+        padding-bottom: 42px;
+    }
+    .section_container {
+        min-height: 400px;
     }
     .column{
+        max-width: 300px;
         align-items: center;
         justify-content: center;
     }
-    .invite_phrase{
+    .catch_phrase .invite_phrase{
         text-align: center;
-        font-size: 5px;
+        font-size: 40px;
         font-weight: 30;
         max-width: 767px;
+        margin-bottom: 0;
     }
-    .btn{
+    .button_container {
+        justify-content: center;
+        width: 767px;
+        margin: 0;
+    }
+    .btn {
+        border-radius: 32px;
+        padding: 5px 16px;
         font-size: 12px;
     }
-}
 
