--- a/style_rwd.css
+++ b/style_rwd.css
@@ -6,6 +6,7 @@
         padding-bottom: 42px;
     }
     .column{
+        width: auto;
         align-items: center;
         justify-content: center;
     }
@@ -14,9 +15,11 @@
         font-size: 40px;
         font-weight: 30;
         margin-bottom: 0;
+        width: auto;
     }
     .button_container {
         justify-content: center;
+        width: auto;
         margin: 0;
     }
     .btn {
@@ -24,8 +27,16 @@
         padding: 5px 16px;
         font-size: 12px;
     }
-   
-    
+    .section_container {
+        min-height: 400px;
+        justify-content: center;
+    }
+    .catch_phrase {
+        flex-direction: column;
+        width: auto;
+        line-height: 95px;
+      }
+      
 
     }
 
