--- a/style_rwd.css
+++ b/style_rwd.css
@@ -1,6 +1,7 @@
 @media (max-width: 767px){
     img.main_photo {
         display: none;
+        width:auto;
     }
     .section_hero {
         padding-bottom: 42px;
@@ -35,8 +36,11 @@
         flex-direction: column;
         width: auto;
         line-height: 95px;
-      }
-      
+    }
+
+    .flex_column {
+        flex-direction: column;
+    }
 
     }
 
