--- a/style_rwd.css
+++ b/style_rwd.css
@@ -6,9 +6,6 @@
     .section_hero {
         padding-bottom: 42px;
     }
-    body{
-        width: auto;
-    }
     .column{
         width: auto;
         align-items: center;
@@ -38,7 +35,6 @@
     .catch_phrase {
         flex-direction: column;
         width: auto;
-        line-height: 95px;
     }
 
     .flex_column {
@@ -46,15 +42,14 @@
     }
 
     .section_heading {
-        margin: auto;
+        margin: 40px;
         font-size: 18px;
-        font-weight: 200;
         width: auto;
         padding-top: 17px;
     }
     .pros_container {
         width: auto;
-        margin: auto;
+        margin-left: 80px;
     }
     .pros_pic{
         width:auto;
