--- a/style_rwd.css
+++ b/style_rwd.css
@@ -24,7 +24,7 @@
         margin: 0;
     }
     .btn {
-        border-radius: 32px;
+        border-radius: 30%;
         padding: 5px 16px;
         font-size: 12px;
     }
@@ -57,6 +57,24 @@
     .text {
         font-size: 16px;
         width: auto;
+    }
+    .mountains_pic{
+        display:none;
+    }
+    .left_side{
+        justify-content: center;
+        align-items: center;
+        width:auto;
+    }
+    .longer_paragraph{
+        width:auto;
+    }
+    .max_width{
+        width:auto;
+    }
+    .max_width{
+        justify-content:center;
+        align-items: center;
     }
 
 }
