--- a/style_rwd.css
+++ b/style_rwd.css
@@ -24,7 +24,7 @@
         margin: 0;
     }
     .btn {
-        border-radius: 30%;
+        border-radius: 32px;
         padding: 5px 16px;
         font-size: 12px;
     }
@@ -47,6 +47,10 @@
         width: auto;
         padding-top: 17px;
     }
+    .pros_photo{
+        height: auto;
+        margin-left: 40px;
+    }
     .pros_container {
         width: auto;
         margin-left: 80px;
@@ -61,20 +65,45 @@
     .mountains_pic{
         display:none;
     }
-    .left_side{
-        justify-content: center;
-        align-items: center;
-        width:auto;
+    .paragraph_header{
+        margin-left:70px;
+    }
+    .paragraph_description{
+    margin-left: 80px;
     }
     .longer_paragraph{
         width:auto;
     }
     .max_width{
-        width:auto;
-    }
-    .max_width{
         justify-content:center;
-        align-items: center;
+        align-items:flex-start;
+        width: auto;
     }
-
+    .right_side{
+        width:auto;
+        height: auto;
+    }
+    .post_container{
+        text-align: center;
+    }
+    .constant_width{
+    width:auto;
+    }
+    .left_side{
+        margin: 40px 0 0 40px;}
+        .pink{
+            margin: 0;
+        }
+    .flex-j-center{
+        height:auto;
+    }
+    .flex-j-center{
+        width: auto;
+    }
+    .left_side_margin{
+        line-height: 25px;
+    }
+    .button_book_margin{
+        margin:0;
+    }
 }
