--- a/style_rwd.css
+++ b/style_rwd.css
@@ -4,6 +4,7 @@
     }
     .header_wrapper{
         width:320px;
+        height:50px;
     }
     .section_wrapper{
         max-width:320px;
@@ -11,8 +12,7 @@
         padding: 0;
     }
     .font_size{
-        font-size: 10px;
-        margin:0;
+        font-size:10px;
     }
     .section_hero {
         padding-bottom: 42px;
@@ -64,7 +64,7 @@
     }
     .pros_container {
         width: auto;
-        margin: 0;
+        margin: 0 auto;
     }
     .text {
         font-size: 16px;
@@ -102,10 +102,12 @@
     }
     .pink{
             margin: 0;
-            width:320px;
         }
     .left_side_margin{
         line-height: 25px;
+    }
+    .invite_phrase{
+        line-height:55px;
     }
     .button_book_margin{
         margin: 0 0 0 100px;
