--- a/style_rwd.css
+++ b/style_rwd.css
@@ -82,6 +82,7 @@
     }
     .text {
         font-size: 16px;
+        margin-bottom: 16px;
         max-width: 767px;
     }
     .mountains_pic{
@@ -145,5 +146,89 @@
     }
     .third_page_header{
         margin-left: 8px;
+    }
+    .padding{
+        flex-direction: column;
+    }
+    .girl_pic{
+        max-width: 252px;
+        max-height: 302px;
+    }
+    .left_side_fourth_page{
+        height:auto;
+        margin-top: 50px;
+    }
+    .right_side_fourth_page {
+        max-width: 767px;
+        height: auto;
+        margin-left: 16px;
+    }
+    .cabin_lovers{
+        font-size: 40px;
+    }
+    .fan_number{
+        height: auto;
+        margin-top: 30px;
+    }
+    .autor{
+        height: auto;
+        margin-top: 100px;
+    }
+    .fourth_page_footer{
+        font-size: 12px;
+        margin-right: 30px;
+    }
+    .numbers_fourth_page{
+        font-size: 12px;
+    }
+    .fifth_page_wrapper{
+        justify-content: flex-start;
+    }
+    .margin_footer{
+        margin: 80px 10px 10px 8px;
+    }
+    .newsletter_info{
+        font-size: 16px;
+    }
+    .input_header{
+        margin-bottom:0;
+    }
+    .bot_nav_margin{
+        margin-left:0;
+        padding-top:0;
+    }
+    .arrow_button{
+        width: 24px;
+        height:24px;
+        margin-top: -15px;
+    }
+    .bot_nav_container {
+        max-width: 668px;
+        margin: 180px 0 30px -200px;
+    }
+    .bot_list{
+        font-size: 10px;
+    }
+    .bot_list{
+        padding-bottom: 5px;
+    }
+    .ul_container_left{
+        line-height: 16px;
+    }
+    .ul_container_center{
+        line-height:16px;
+        margin: 0 36px;
+    }
+    .ul_container_right{
+        line-height:16px;
+    }
+    .input_input{
+        margin-top: 10px;
+    }
+    .footer_par{
+        font-size:8px;
+    }
+    .foot_link{
+        margin:0;
     }
 }
