--- a/style_rwd.css
+++ b/style_rwd.css
@@ -119,7 +119,7 @@
         line-height:55px;
     }
     .button_book_margin{
-        margin: 0 0 0 70px;
+        margin: 35px 0 35px 70px;
     }
     .pic{
         max-width: 100%;
@@ -136,7 +136,8 @@
         padding:0;
     }
     .third_page_header{
-        margin-left: 8px;
+        margin: 0 0 16px 16px;
+        font-size: 24px;
     }
     .padding{
         padding-left:16px;
