--- a/style_rwd.css
+++ b/style_rwd.css
@@ -144,8 +144,8 @@
         flex-direction: column;
     }
     .girl_pic{
-        max-width: 252px;
-        max-height: 302px;
+        max-width: 100%;
+        max-height: 350px;
         margin:0;
     }
     .left_side_fourth_page{
