applied first section padding and margin

--- a/style_rwd.css
+++ b/style_rwd.css
@@ -33,17 +33,16 @@
         text-align: center;
         font-size: 40px;
         margin-bottom: 0;
-        max-width:767px;
     }
     .button_container {
         justify-content: flex-start;
         max-width:767px;
-        margin: 0 0 0 100px;
+        margin-left: 75px;
     }
     .btn {
         border-radius: 32px;
-        padding: 5px 16px;
-        font-size: 12px;
+        padding: 10px 32px;
+        font-size: 24px;
     }
     .section_container {
         min-height: 300px;
@@ -52,6 +51,7 @@
     .catch_phrase {
         flex-direction: column;
         max-width:300px;
+        padding-top: 80px;
     }
 
     .flex_column {
@@ -69,7 +69,6 @@
     }
     .pros_container {
         max-width:767px;
-        
     }
     .text {
         font-size: 16px;
