--- a/style_rwd.css
+++ b/style_rwd.css
@@ -176,12 +176,14 @@
     }
     .fifth_page_wrapper{
         justify-content: flex-start;
+        flex-direction: column;
     }
     .margin_footer{
         margin: 80px 10px 10px 16px;
     }
     .newsletter_info{
         font-size: 16px;
+        padding-top: 10px;
     }
     .input_header{
         margin-bottom:0;
@@ -197,7 +199,7 @@
     }
     .bot_nav_container {
         max-width: 668px;
-        margin: 180px 0 30px -200px;
+        margin: 30px 0 50px 20px;
     }
     .bot_list{
         font-size: 10px;
@@ -219,5 +221,8 @@
     }
     .second_page_container{
         padding-top: 15px;
+    }
+    .ul_container_center{
+        margin: 0 56px;
     }
 }
