--- a/style_rwd.css
+++ b/style_rwd.css
@@ -141,7 +141,7 @@
         font-size: 24px;
     }
     .padding{
-        padding-left:16px;
+        padding: 0 16px;
         flex-direction: column;
     }
     .girl_pic{
