--- a/style.css
+++ b/style.css
@@ -411,7 +411,10 @@ body {
   font-size: 19px;
   margin-right: 7px;
 }
-
+.last_button{
+  box-shadow: none;
+  border-style: none;
+}
 
 .fourth_page_footer {
   font-size: 19px;
