--- a/style_rwd.css
+++ b/style_rwd.css
@@ -35,9 +35,10 @@
         margin-bottom: 0;
     }
     .button_container {
-        justify-content: flex-start;
-        max-width:767px;
-        margin-left: 75px;
+        justify-content: center;
+        max-width:100%;
+        margin:0;
+
     }
     .btn {
         border-radius: 32px;
@@ -201,13 +202,11 @@
     }
     .bot_nav_container {
         max-width: 668px;
-        margin: 30px 0 50px 20px;
+        margin: 30px 0 32px 40px;
     }
     .bot_list{
         font-size: 10px;
-    }
-    .bot_list{
-        padding-bottom: 5px;
+        padding:0;
     }
     .ul_container:nth-child(even) {
         line-height:16px;
