--- a/style_rwd.css
+++ b/style_rwd.css
@@ -103,7 +103,7 @@
         height:auto;
     }
     .constant_width{
-        max-width: 300px;
+        max-width: 100%;
     }
     .left_side{
         margin: 40px 0 0 0;
@@ -120,8 +120,10 @@
         line-height:55px;
     }
     .button_book_margin{
-        margin: 35px 0 35px 140px;
+        margin: 35px 0;
         padding-top:0;
+        display: flex;
+        justify-content: center;
     }
     .pic{
         max-width: 100%;
