--- a/style_rwd.css
+++ b/style_rwd.css
@@ -157,7 +157,7 @@
         margin-top: 50px;
     }
     .right_side_fourth_page {
-        max-width: 767px;
+        max-width: 100%;
         height: auto;
         margin:0;
     }
