well have no idea why it doesn't work seems good for me but apparently js is not working in here

--- a/style.css
+++ b/style.css
@@ -415,6 +415,10 @@ body {
   box-shadow: none;
   border-style: none;
 }
+.hamburger{
+  box-shadow: none;
+  border-style: none;
+}
 
 .fourth_page_footer {
   font-size: 19px;
