--- a/style_rwd.css
+++ b/style_rwd.css
@@ -2,6 +2,86 @@
     img.main_photo {
         display: none;
     }
+    .hamburger{
+        padding:10px;
+        display:inline-block;
+        cursor:pointer;
+        background-color: transparent;
+        border:0;
+        margin:0;
+    }
+    .hamburger, .navigation{
+        transition: transform .3s .1s ease-in-out;
+    }
+    .hamburger-active{
+        transform: translateX(250px);
+    }
+    .hamburger_box{
+        width:40px;
+        height: 24px;
+        display: inline-block;
+        position: relative;
+    }
+    .hamburger_inner{
+        width:100%;
+        height: 3px;
+        background-color: black;
+        position: absolute;
+        left:0;
+        top:50%;
+        transform: translateY(-50%);
+        transition: background-color .1s .2s ease-in-out;
+    }
+    .hamburger_inner::before,
+    .hamburger_inner::after{
+        width:100%;
+        height: 3px;
+        background-color: black;
+        position: absolute;
+        content: '';
+        left:0;
+        transition: transform .2s .2s ease-in-out;
+    }
+    .hamburger_inner::before{
+        top:-10px;
+    }
+    .hamburger_inner::after{
+        top:10px;
+    }
+    .hamburger-active, .hamburger_inner {
+        background-color: transparent;
+    }
+    .hamburger-active, .hamburger_inner::before{
+        transform: translateY(10px) rotate(45deg);
+    }
+    .hamburger-active, .hamburger_inner::after{
+        transform: translateY(-10px) rotate(-45deg);
+    }
+
+    .navigation_active{
+        transform: translateX(0);
+    }
+    .navigation{
+        height: 100vh;
+        width: 250px;
+        background-color: yellowgreen;
+        position: absolute;
+        top:0;
+        left: 0;
+        transform: translateX(-250px);
+       
+    }
+    .margin_menu_top{
+        margin-top: 50px;
+        list-style: none;
+    }
+    .nav_item{
+        margin-bottom: 20px;
+    }
+    .burger_link{
+        text-decoration: none;
+        color: black;
+    }
 
     .nav_margin, .margin_header, .margin_menu h2 {
         margin: 0;
